<resources>
    <string name="app_name">hangman_together</string>
    <string name="app_icon_name">행맨투게더</string>
    <string name="facebook_app_id">311899562490216</string>
    <!--<string name="gcm_defaultSenderId">638732134425</string>-->

    <!--SplashActivity-->
    <string name="splash_value_error_internet_connection">인터넷이 연결되어 있지 않아 앱을 종료합니다.</string>

    <!--IntroActivity-->
    <string name="intro_value_btn_login">시작하기</string>
    <string name="intro_value_btn_facebook_login">페이스북으로 시작하기</string>
    <string name="intro_value_nickname_dialog_title">닉네임 입력</string>
    <string name="intro_value_nickname_dialog_message">닉네임을 입력해주세요.</string>
    <string name="intro_value_nickname_dialog_btn_ok">확인</string>
    <string name="intro_value_connection_error">서버와의 접속에 실패했습니다.\n잠시 후 다시 시도해 주세요.</string>
    <string name="intro_value_login_failure">로그인에 실패했습니다.\n잠시 후 다시 시도해 주세요.</string>
    <string name="intro_value_join_failure">회원 가입에 실패했습니다.\n잠시 후 다시 시도해 주세요.</string>
    <string name="intro_value_permission_should">SMS 권한 설정을 허용하지 않으면 게임을 플레이할 수 없습니다.</string>
    <string name="intro_value_join_nickname_already_exist">존재하는 닉네임입니다.\n다른 닉네임을 입력해주세요.</string>
    <string name="intro_value_facebook_login_cancel">페이스북 로그인이 취소되었습니다.</string>
    <string name="intro_value_facebook_login_failure">페이스북 로그인에 실패하였습니다.</string>
    <string name="intro_value_no_phone_number">번호가 없는 핸드폰에서는 게임을 할 수 없습니다.</string>

    <!--MainActivity-->
    <string name="main_value_fragment_title_home">홈 메뉴</string>
    <string name="main_value_fragment_title_friend_list">친구 목록</string>
    <string name="main_value_fragment_title_stash">보관함</string>

    <!--HomeFragment-->
    <string name="home_value_mynickname_label"> 님의 정보</string>
    <string name="home_value_myscore_label">나의 총 점수 : </string>
    <string name="home_value_mycandy_label">내 캔디 : </string>
    <string name="home_value_btn_play">게임 시작하기</string>
    <string name="home_value_rank_label">RANKING TOP 10</string>

    <!--FriendFragment-->
    <string name="friend_value_btn_add">친구 추가하기</string>
    <string name="friend_value_comment_give_candy">캔디는 하루에 친구 1명 당 1번만 선물할 수 있습니다.</string>
    <string name="friend_value_no_friend">친구가 없습니다.\n친구를 추가해보세요.</string>
    <string name="friend_value_add_friend_dialog_title">친구 추가하기</string>
    <string name="friend_value_add_friend_dialog_message">추가할 친구의 닉네임을 정확히 입력해주세요.</string>
    <string name="friend_value_add_friend_dialog_btn_add">친구 추가</string>
    <string name="friend_value_add_friend_success">친구가 추가되었습니다.</string>
    <string name="friend_value_add_friend_not_exist">해당 닉네임을 가진 유저가 존재하지 않습니다.</string>
    <string name="friend_value_add_friend_already_add">이미 친구로 등록되어 있는 유저입니다.</string>
    <string name="friend_value_add_friend_not_myself">스스로를 친구로 등록할 수 없습니다.</string>

    <!--listrow_friend-->
    <string name="friend_row_value_btn_give_candy">캔디 주기</string>

    <!--StashFragment-->
    <string name="stash_value_btn_take_all_candy">캔디 모두 받기</string>
    <string name="stash_value_title">보관함에는 캔디가 최대 30개까지 저장됩니다.</string>
    <string name="stash_value_no_item">선물 받은 캔디가 없습니다.</string>
    <string name="stash_value_take_all_candy">친구에게 받은 캔디를 모두 얻었습니다.</string>
    <string name="stash_value_stash_empty">보관함에 받을 캔디가 없습니다.</string>

    <!--listrow_stash-->
    <string name="stash_row_value_label">보낸 사람 : </string>
    <string name="stash_row_value_btn_take_candy">캔디 받기</string>

    <!--GameActivity-->
    <string name="game_value_toolbar_title">Hangman 게임 중</string>
    <string name="game_value_win_label">WIN!</string>
    <string name="game_value_lose_label">LOSE!</string>
    <string name="game_value_spell_blank"><u>?</u></string>
    <string name="game_value_win_score">점을 얻었습니다!</string>
    <string name="game_value_lose_score">점을 잃었습니다..</string>
    <string name="game_value_game_end">게임을 마쳤습니다.\n뒤로가기 버튼을 누르면 메인화면으로 돌아갑니다.</string>
    <string name="game_value_no_candy">게임을 하기 위해서는 캔디가 필요합니다.</string>
    <string name="game_value_game_exit_dialog_title">게임 강제 종료</string>
    <string name="game_value_game_exit_dialog_message">게임을 종료하면 사용된 캔디는 복구되지 않습니다.\n종료하시겠습니까?</string>
    <string name="game_value_game_exit_dialog_btn_ok">게임 종료하기</string>
    <string name="game_value_game_exit_dialog_btn_continue">게임 계속하기</string>
    <string name="game_value_btn_alpha_a">A</string>
    <string name="game_value_btn_alpha_b">B</string>
    <string name="game_value_btn_alpha_c">C</string>
    <string name="game_value_btn_alpha_d">D</string>
    <string name="game_value_btn_alpha_e">E</string>
    <string name="game_value_btn_alpha_f">F</string>
    <string name="game_value_btn_alpha_g">G</string>
    <string name="game_value_btn_alpha_h">H</string>
    <string name="game_value_btn_alpha_i">I</string>
    <string name="game_value_btn_alpha_j">J</string>
    <string name="game_value_btn_alpha_k">K</string>
    <string name="game_value_btn_alpha_l">L</string>
    <string name="game_value_btn_alpha_m">M</string>
    <string name="game_value_btn_alpha_n">N</string>
    <string name="game_value_btn_alpha_o">O</string>
    <string name="game_value_btn_alpha_p">P</string>
    <string name="game_value_btn_alpha_q">Q</string>
    <string name="game_value_btn_alpha_r">R</string>
    <string name="game_value_btn_alpha_s">S</string>
    <string name="game_value_btn_alpha_t">T</string>
    <string name="game_value_btn_alpha_u">U</string>
    <string name="game_value_btn_alpha_v">V</string>
    <string name="game_value_btn_alpha_w">W</string>
    <string name="game_value_btn_alpha_x">X</string>
    <string name="game_value_btn_alpha_y">Y</string>
    <string name="game_value_btn_alpha_z">Z</string>
</resources>
