<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stash.StashFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fragment_base_padding"
        android:background="@color/colorBaseBackground"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:layout_marginBottom="@dimen/fragment_base_view_margin_bottom"
            android:padding="@dimen/home_rank_lv_padding"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/stash_tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/stash_value_title"
                android:textColor="@color/colorBlack"
                />
            <TextView
                android:id="@+id/stash_tv_no_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/stash_value_no_item"
                />
            <ListView
                android:id="@+id/stash_lv_candy"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>
        </LinearLayout>
        <Button
            android:id="@+id/friend_btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_base_view_margin_bottom"
            android:text="@string/stash_value_btn_take_all_candy"
            android:textSize="@dimen/fragment_base_btn_text_size"
            android:background="@drawable/common_btn_selector"
            android:textColor="@color/colorWhite"
            />
    </LinearLayout>

</FrameLayout>
